--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -47,7 +47,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     border-bottom: 1px #efefef solid;
-    padding: 2em 0 2em 0;
+    padding: 2em 0.1em 2em 0.1em;
     
 
     .paper-box-image{
