--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -47,7 +47,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     border-bottom: 1px #efefef solid;
-    padding: 2em 2em 2em 2em;
+    padding: 2em 0 2em 0;
     
 
     .paper-box-image{
@@ -98,11 +98,13 @@ h1:before, .anchor:before {
 }
 
 .badge {
+    padding-top: 0.8em;
+    padding-bottom: 0.8em;
     padding-left: 1rem;
     padding-right: 1rem;
     position: absolute;
-    margin-top: 1rem;
-    margin-left: -1rem;
+    margin-top: .5em;
+    margin-left: -.5em;
     color: white;
     background-color: #00369f;
     font-size: .8em;
