--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -98,13 +98,13 @@ h1:before, .anchor:before {
 }
 
 .badge {
-    padding-top: 0.8em;
-    padding-bottom: 0.8em;
+    padding-top: 0.8rem;
+    padding-bottom: 0.8rem;
     padding-left: 1rem;
     padding-right: 1rem;
     position: absolute;
-    margin-top: .5em;
-    margin-left: -.5em;
+    margin-top: .8rem;
+    margin-left: -.8rem;
     color: white;
     background-color: #00369f;
     font-size: .8em;
